<resources>
    <string name="app_name">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">welcome USERNAME</string>
    <string name="nav_header_subtitle">Current Score here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="camera_error">This device does not support camera2 API</string>
    <string name="activity_name_classification">TF classify</string>
    <string name="home_search">Search</string>
    <string name="home_browse">Gallery</string>
    <string name="home_report">Report</string>
    <string name="home_camera">Camera</string>
    <string name="potw">Plant of the Week</string>
    <string name="info">This is a Hibiscus Brackenridgei. It is just a rambling message here talking about the plant.</string>

</resources>
