<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="@dimen/home_fab_size"
        android:layout_height="@dimen/home_fab_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="19dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="@dimen/home_fab_size"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="@dimen/home_fab_size"
        android:layout_height="@dimen/home_fab_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/transparent"
        app:fabCustomSize="@dimen/home_fab_size"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@android:drawable/ic_menu_search" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="@dimen/home_fab_size"
        android:layout_height="@dimen/home_fab_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:backgroundTint="@android:color/transparent"
        app:fabCustomSize="@dimen/home_fab_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:rippleColor="?android:attr/colorBackgroundCacheHint"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="@dimen/home_fab_size"
        android:layout_height="@dimen/home_fab_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="19dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="@dimen/home_fab_size"
        app:backgroundTint="@android:color/transparent"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="@dimen/home_text_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/home_browse"
        android:text="@string/home_camera"
        android:textAlignment="center"
        android:textColor="@color/homeText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText2" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="@dimen/home_text_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/home_report"
        android:text="@string/home_report"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/homeText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText3" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="@dimen/home_text_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/home_search"
        android:text="@string/home_search"
        android:textAlignment="center"
        android:textColor="@color/homeText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="@dimen/home_text_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/home_browse"
        android:text="@string/home_browse"
        android:textAlignment="center"
        android:textColor="@color/homeText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="248dp"
        android:text="@string/potw"
        android:textColor="@color/homeText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="321dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/info"
        android:textColor="@color/homeText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="351dp"
        android:layout_height="279dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hibiscus_faded" />


</android.support.constraint.ConstraintLayout>